test/fail/override-type.grace
constructor name {
  type Name = type {}
}

object {
  inherits name

  method Name {}
}
